--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 
 </head>
 <body>
-    <div class="search-wrapper">
-        <label for="search"></label>
-        <input type="search" id="search" placeholder="Search for pokemons">
-    </div>
+    <form class="search-container">
+        <input type="text" id="search-bar" placeholder="      Search for pokemons!"
+        <a href="#"><img class="search-icon" src="/images/search-icon.png"></a>
+    </form>
+
     <div class="container">
         <ul id="pokedex"></ul>
     </div>
