made bunch of changes (filter, id, different card view, logic)

--- a/index.html
+++ b/index.html
@@ -15,7 +15,38 @@
     <form class="search-container">
         <input type="text" id="search-bar" placeholder="      Search for pokemons!"
         <a href="#"><img class="search-icon" src="/images/search-icon.png"></a>
+        <a href="#"><img class="filter-list" src="/images/filter.png" id="filter-list-button" onclick="showOrHide()"></a>
     </form>
+    <div id="filter-list-window" class="filter-container">
+        <div class="filter-heading">
+            <span class="filter-heading-line"></span>
+            Type
+            <span class="filter-heading-line"></span>
+        </div>
+
+        <div class="filter-buttons">
+        <button class="filter-button" data-type="fire">Fire</button>
+        <button class="filter-button" data-type="poison">Poison</button>
+        <button class="filter-button" data-type="water">Water</button>
+        <button class="filter-button" data-type="bug">Bug</button>
+        <button class="filter-button" data-type="flying">Flying</button>
+        <button class="filter-button" data-type="normal">Normal</button>
+        <button class="filter-button" data-type="electric">Electric</button>
+        <button class="filter-button" data-type="ground">Ground</button>
+        <button class="filter-button" data-type="fighting">Fighting</button>
+        <button class="filter-button" data-type="psychic">Psychic</button>
+        <button class="filter-button" data-type="steel">Steel</button>
+        <button class="filter-button" data-type="ice">Ice</button>
+        <button class="filter-button" data-type="ghost">Ghost</button>
+        <button class="filter-button" data-type="rock">Rock</button>
+        <button class="filter-button" data-type="dragon">Dragon</button>
+        </div>
+
+        <div class="button-container">
+            <button id="reset-button">Reset</button>
+            <button id="apply-button">Apply</button>
+        </div>
+    </div>
 
     <div class="container">
         <ul id="pokedex"></ul>
