--- a/main.html
+++ b/main.html
@@ -18,8 +18,8 @@
             <a href="#" class="navbar-link">About</a>
         </div>
         <div class="navbar-buttons">
-            <button class="navbar-button">Sign In</button>
-            <button class="navbar-button">Sign Out</button>
+            <button id="signup-button" class="navbar-button">Sign In</button>
+            <button id="login-button" class="navbar-button">Log In</button>
         </div>
     </nav>
 </header>
@@ -28,9 +28,36 @@
     <video autoplay loop muted>
         <source src="main images/videoplayback.mp4" type="video/mp4">
         <source src="video.webm" type="video/webm">
-
     </video>
 </div>
 
+<!-- Sign Up Modal -->
+<div id="signup-modal" class="modal">
+    <div class="modal-content">
+        <span class="close-button">&times;</span>
+        <form id="signup-form">
+            <h2>Sign Up</h2>
+            <input type="text" placeholder="Username" required>
+            <input type="email" placeholder="Email" required>
+            <input type="password" placeholder="Password" required>
+            <button type="submit">Sign Up</button>
+        </form>
+    </div>
+</div>
+
+<!-- Log In Modal -->
+<div id="login-modal" class="modal">
+    <div class="modal-content">
+        <span class="close-button">&times;</span>
+        <form id="login-form">
+            <h2>Log In</h2>
+            <input type="text" placeholder="Username" required>
+            <input type="password" placeholder="Password" required>
+            <button type="submit">Log In</button>
+        </form>
+    </div>
+</div>
+
+<script src="main.js"></script>
 </body>
 </html>
