--- a/html/index.html
+++ b/html/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokemon Game</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
 
 
@@ -46,7 +46,7 @@
         <span class="button__text">Load More</span>
     </button>
 
-<script src="app.js"></script>
+<script src="../js/app.js"></script>
 
 
 
